# mri-fatwater

./: .gitignore  README.md  pyproject.toml
challenge/: 1.yml  10.yml  11.yml  12.yml  13.yml  14.yml  15.yml  16.yml  17.yml  2.yml  4.yml  5.yml  6.yml  7.yml  8.yml  9.yml
configs/: algoParams.yml  algoParams2D.yml  algoParams3D.yml  dataParams.yml  modelParams.yml  modelParamsFAC1.yml  modelParamsFAC2.yml  modelParamsFAC3.yml
data/: 17.npy  17.yml
mri_fatwater/: DICOM.py  FAC.py  MATLAB.py  algorithm.py  cli.py  config.py  constants.py  fatwater.py  io.py  params.py
mri_fatwater/configs/: algoParams.yml  dataParams.yml  modelParams.yml  modelParamsFAC1.yml  modelParamsFAC2.yml  modelParamsFAC3.yml
mri_fatwater/data/: 17.yml
scripts/: demo.py
